hphp/hack/test/typecheck/is_vec_or_varray/is_vec_or_varray.php.exp
File "is_vec_or_varray.php", line 11, characters 5-17:
Invalid index type for this array (Typing[4324])
File "is_vec_or_varray.php", line 11, characters 8-12:
Expected `int`
File "is_vec_or_varray.php", line 4, characters 7-25:
This can only be indexed with integers
File "is_vec_or_varray.php", line 11, characters 8-12:
But got `string`
File "is_vec_or_varray.php", line 11, characters 5-17:
Invalid index type for this vec (Typing[4324])
File "is_vec_or_varray.php", line 11, characters 8-12:
Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
File "is_vec_or_varray.php", line 11, characters 8-12:
But got `string`
File "is_vec_or_varray.php", line 12, characters 16-17:
Invalid argument (Typing[4110])
File "is_vec_or_varray.php", line 24, characters 21-41:
Expected `dict<arraykey, mixed>`
File "is_vec_or_varray.php", line 4, characters 7-25:
But got `varray<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 13, characters 15-16:
Invalid argument (Typing[4110])
File "is_vec_or_varray.php", line 23, characters 20-29:
Expected `vec<mixed>`
File "is_vec_or_varray.php", line 4, characters 7-25:
But got `varray<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 14, characters 18-19:
Invalid argument (Typing[4110])
File "is_vec_or_varray.php", line 26, characters 23-45:
Expected `darray<arraykey, mixed>`
File "is_vec_or_varray.php", line 4, characters 7-25:
But got `varray<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 15, characters 18-19:
Invalid argument (Typing[4110])
File "is_vec_or_varray.php", line 25, characters 23-35:
Expected `varray<mixed>`
File "is_vec_or_varray.php", line 4, characters 7-25:
But got `vec<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 16, characters 28-29:
Invalid argument (Typing[4110])
File "is_vec_or_varray.php", line 27, characters 33-65:
Expected `varray_or_darray<arraykey, mixed>`
File "is_vec_or_varray.php", line 4, characters 7-25:
But got `vec<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 18, characters 5-12:
a mixed value does not allow array append (Typing[4006])
File "is_vec_or_varray.php", line 3, characters 15-19:
Definition is here
